# sympl

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  bootstrap_venv.sh  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  travis_pypi_setup.py
docs/: Makefile  conf.py
licensing/: LICENSE_HEADER.cpp  LICENSE_HEADER.makefile  LICENSE_HEADER.sh  add_license_header.py  remove_license_header.py
sympl/: __init__.py
sympl/_components/: __init__.py  basic.py  netcdf.py  plot.py  timesteppers.py
sympl/_core/: __init__.py  base_component.py  base_components.py  checks.py  combine_properties.py  composite.py  constants.py  core_components.py  data_array.py  dataarray.py  dims.py  dynamic_checkers.py  dynamic_operators.py  exceptions.py  factory.py  get_np_arrays.py  init_np_arrays.py  monitors.py  restore_dataarray.py  state.py  static_checkers.py  static_operators.py  steppers.py  steppers_utils.py  storage.py  tendency_stepper.py  tendencystepper.py  time.py  tracers.py  typing.py  typingx.py  units.py  util.py  utils.py  utils_storage.py  wildcard.py  wrappers.py
tests/: test_array.py  test_base_components.py  test_components.py  test_composite.py  test_constants.py  test_get_restore_numpy_array.py  test_match_dims_like.py  test_netcdf_monitor.py  test_restart_monitor.py  test_state.py  test_time.py  test_time_differencing_wrapper.py  test_timestepping.py  test_tracers.py  test_units.py  test_util.py  test_wrapper.py
