[metadata]
name = sympl
description = Sympl is a Toolkit for building Earth system models in Python
author = Jeremy McGibbon
author_email = mcgibbon@uw.edu
license = BSD
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    Source = https://github.com/mcgibbon/sympl
platforms = Linux, Mac
keywords = sympl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >= 3.6
install_requires =
    cftime
    matplotlib
    netcdf4
    numpy
    pint
    scipy
    xarray

[options.extras_require]
cupy =
    cupy
test =
    coverage>=4.1
    mock>=2.0.0
    pytest>=2.9.2

[tool:pytest]
testpaths = tests

[bumpversion]
current_version = 0.4.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:sympl/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = docs
